# O.A.N

./: .gitignore  AGENTS.md  Cargo.toml  DEMO_GUIDE.md  LICENSE  README.md
.kilo/plans/: 1777146896824-cosmic-cactus.md
agent-cli/: Cargo.toml
agent-cli/src/: commands.rs  main.rs
backend/: .env  .env.example  Cargo.toml
backend/src/: main.rs
backend/src/agents/: buyer.rs  mod.rs  verifier.rs  worker.rs
backend/src/db/: mod.rs  schema.rs
backend/src/lexe/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/wallet/: mod.rs
docs/: ARCHITECTURE.md  spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityFeed.tsx  AgentDashboard.tsx  AgentManager.tsx  HumanDashboard.tsx  QRCode.tsx  TaskBoard.tsx
frontend/src/hooks/: useL402.ts  useWalletConnection.ts
frontend/src/lib/: api.ts
