[package]
name = "oan-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
bitcoin = "0.32"
lightning-invoice = "0.33"

rand = "0.8"
futures = "0.3"
pin-project-lite = "0.2"
hex = "0.4"
dotenvy = "0.15"
urlencoding = "2.1"
